<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.songlin</groupId>
  <artifactId>DataAnalysisTool</artifactId>
  <version>1.0.0</version>

  <name>DataAnalysisTool</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <spring.boot.version>2.0.3.RELEASE</spring.boot.version>
    <spring.version>5.0.7.RELEASE</spring.version>
  </properties>

  <dependencies>
    <dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-web</artifactId>
    	<version>${spring.boot.version}</version>
    	<exclusions>
    		<exclusion>
    			<artifactId>spring-boot-starter-tomcat</artifactId>
    			<groupId>org.springframework.boot</groupId>
    		</exclusion>
    	</exclusions>
    </dependency>
    <dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-jetty</artifactId>
    	<version>${spring.boot.version}</version>
    </dependency>
<!-- 	<dependency> -->
<!-- 	    <groupId>org.springframework.boot</groupId> -->
<!-- 	    <artifactId>spring-boot-starter-undertow</artifactId> -->
<!-- 	    <version>2.0.3.RELEASE</version> -->
<!-- 	</dependency> -->

    <dependency>
	    <groupId>org.xerial</groupId>
	    <artifactId>sqlite-jdbc</artifactId>
	    <version>3.23.1</version>
	</dependency>
    <dependency>
    	<groupId>com.alibaba</groupId>
    	<artifactId>druid</artifactId>
    	<version>1.1.5</version>
    </dependency>
    <dependency>
    	<groupId>junit</groupId>
    	<artifactId>junit</artifactId>
    	<version>4.12</version>
    </dependency>
    <dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-test</artifactId>
    	<version>2.0.3.RELEASE</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.springframework</groupId>
    	<artifactId>spring-orm</artifactId>
    	<version>${spring.version}</version>
    </dependency>
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-aop</artifactId>
	    <version>${spring.boot.version}</version>
	</dependency>
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-devtools</artifactId>
		<version>2.0.3.RELEASE</version>
	</dependency>
	<dependency>
		<groupId>com.alibaba</groupId>
		<artifactId>fastjson</artifactId>
		<version>1.1.37</version>
	</dependency>
	<dependency>
		<groupId>org.mybatis.spring.boot</groupId>
		<artifactId>mybatis-spring-boot-starter</artifactId>
		<version>1.3.2</version>
	</dependency>
	<dependency>
		<groupId>com.songlin</groupId>
		<artifactId>sqlite-dialert</artifactId>
		<version>1.0.0</version>
	</dependency>
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-data-jpa</artifactId>
		<version>2.0.3.RELEASE</version>
	</dependency>
	<dependency>
		<groupId>commons-fileupload</groupId>
		<artifactId>commons-fileupload</artifactId>
		<version>1.3.1</version>
	</dependency>
	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>5.1.6</version>
	</dependency>
	<dependency>
		<groupId>oracle</groupId>
		<artifactId>OracleDriver</artifactId>
		<version>5</version>
	</dependency>
  </dependencies>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.20.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- 打包命令： mvn clean package appassembler:assemble -DskipTests -->
        <!-- 直接启动 java -Djava.ext.dirs=lib dat.App -->
        <plugin>
		    <groupId>org.codehaus.mojo</groupId>
		    <artifactId>appassembler-maven-plugin</artifactId>
		    <version>2.0.0</version>
		    <configuration>
			    <platforms>
			    	<platform>windows</platform>
			    	<platform>unix</platform>
			    </platforms>
			    <!-- 根目录 -->
				<assembleDirectory>
					${project.build.directory}/DataAnalysisTool
				</assembleDirectory>
				<repositoryName>lib</repositoryName>
				<binFolder>bin</binFolder>
				<configurationDirectory>conf</configurationDirectory>
				<copyConfigurationDirectory>true</copyConfigurationDirectory>
				<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
				<repositoryLayout>flat</repositoryLayout>
				<encoding>UTF-8</encoding>
				<logsDirectory>logs</logsDirectory>
				<tempDirectory>tmp</tempDirectory>
				<programs>
					<program>
						<id>DataAnalysisTool</id>
						<mainClass>dat.App</mainClass>
						<jvmSettings>
							<extraArguments>
								<extraArgument>-server</extraArgument>
								<extraArgument>-Xmx512M</extraArgument>
								<extraArgument>-Xms128M</extraArgument>
							</extraArguments>
						</jvmSettings>
					</program>
				</programs>
		    </configuration>
		</plugin>
      </plugins>
    </pluginManagement>
    <plugins>
    	<plugin>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-maven-plugin</artifactId>
    		<version>2.0.3.RELEASE</version>
    	</plugin>
    </plugins>
  </build>
</project>
